# EngiLearn-AI

./: .gitignore  README.md  package-lock.json  render.yaml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: codestep_agent.py  discuss_agent.py  flashcard_agent.py  interview_agent.py  mindmap_agent.py  question_agent.py  syllabus.py  teaching.py  timeline_agent.py
backend/app/api/v1/: routes_chat.py  routes_documents.py  routes_flashcards.py  routes_health.py  routes_interview.py  routes_questions.py  routes_syllabus.py  routes_visual.py  schemas.py
backend/app/cache/: redis.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  models.py  repositories.py
backend/app/llm/: client.py  prompts.py
backend/app/services/: document_service.py  resume_service.py  session_service.py  syllabus_service.py  teaching_service.py
backend/scripts/: live_demo.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agents.py
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/interview/: page.tsx
frontend/app/tools/: page.tsx
frontend/components/: ChatPanel.tsx  CopyButton.tsx  DocumentUpload.tsx  Header.tsx  Hero.tsx  Markdown.tsx  MessageBubble.tsx  ScrollBook.tsx  SessionsSidebar.tsx  SyllabusPanel.tsx  TopicCard.tsx  TopicInput.tsx
frontend/components/dashboard/: ProgressMap.tsx  StreakCalendar.tsx
frontend/components/flashcards/: FlashcardCard.tsx  FlashcardDeck.tsx  (+1 more)
(+12 files in other folders)
